--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AppEtudiant</string>
+    <string name="select_date">Sélectionner une date</string>
+    <string name="no_date_selected">Aucune date sélectionnée</string>
+    <string name="change_date">Changer</string>
+    <string name="date_format">dd/MM/yyyy</string>
+    <string name="student_date">Date: %1$s</string>
+    <string name="please_select_date">Veuillez sélectionner une date</string>
 </resources>
